Update github.actions with java 21